ansible/include/k8s/kube-prometheus/middleware-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-permanent
  namespace: monitoring
spec:
  redirectScheme:
    permanent: true
    scheme: https
